# CYLGame

./: .buildinfo  .coveragerc  .gitignore  .travis.yml  CYLGame.html  INSTALL_GAME.md  LICENSE  Makefile  Pipfile  README.md  competition_script_template.py  example_bot.lp  example_game.py  game.py  game_db_editor.py  genindex.html  index.html  load_tester.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  ubuntu_setup.sh
.github/workflows/: build.yml  publish-docs.yml
CYLGame/: .Game.py.swp  .Server.py.swp  CYLGame.py  CYLGameServer.py  Comp.py  Database.py  Display.py  Errors.py  Frame.py  Game.py  Log.py  Panels.py  Player.py  SensorGame.py  Server.py  Sprite.py  Utils.py  __init__.py  version.py
CYLGame/data/: little_python_intro.md
CYLGame/static/: dark.css  draw_functions.js  gui.js  main.css  player.js
CYLGame/static/ace/: mode-lp.js
CYLGame/structures/: const_mapping.py
CYLGame/templates/: grid.html  grid_player.html  index.html
CYLGame/www/static/: draw_functions.js  main.css  player.js
CYLGame/www/static/ace/: ext-modelist.js
CYLGame/www/templates/: grid.html  grid_player.html  nongrid.html  sensors.html
CYLGameServer/: CYLGame.py  CYLGameServer.py  __init__.py
CYLGameServer/static/: dark.css
CYLGameServer/static/ace/: mode-lp.js
CYLGameServer/templates/: index.html
_modules/: index.html
_modules/CYLGame/: Comp.html  Database.html  Display.html  Frame.html  Game.html  Panels.html  Player.html  SensorGame.html  Server.html  Utils.html
_sources/: CYLGame.rst.txt  index.rst.txt
_sources/userguide/: release.rst.txt
data/: little_python_intro.md
doc/: CYLGame pipeline.md  Makefile  Release.md  make.bat
doc/source/: conf.py  index.rst
docs/: conf.py  index.rst  modules.rst
docs/_build/doctrees/: CYLGame.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/doctrees/userguide/: release.doctree  (+3 more)
docs/_build/html/: .buildinfo  CYLGame.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/userguide/: installing.rst  release.rst
schools/SBE793195/: name
tests/database/: __init__.py  test_game.py  test_key_value.py
tests/examples/: custom_char_size_test.py  two_d_sprite_gen_test.py
tests/frame/: test_grid.py
tests/panels/: test_map_panel.py  test_panel.py
tests/sprite/: test_multi_dim_coloring.py
tests/utils/: test_OnlineMean.py  test_choose.py  test_cipher.py  test_deprecated.py  test_int2base.py
userguide/: build_docs.html  installing.html  pipeline.html  release.html
(+17 files in other folders)
